--- a/omnitool/omnibox/compose.yml
+++ b/omnitool/omnibox/compose.yml
@@ -4,9 +4,10 @@ services:
     container_name: omni-windows
     privileged: true
     environment:
-      RAM_SIZE: "8G"
+      RAM_SIZE: "6G"
       CPU_CORES: "4"
       DISK_SIZE: "20G"
+      KVM: "N"
     devices:
       - /dev/kvm
       - /dev/net/tun
